--- a/26. removeDuplicates.ipynb
+++ b/26. removeDuplicates.ipynb
@@ -107,15 +107,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4586219",
+   "metadata": {},
+   "source": [
+    "### 解法2. 逆序删除"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d110672",
    "metadata": {},
    "source": [
-    "python逆序删除：删除后数组长度会变化，索引也会变化，所以要用逆序"
+    "python逆序删除：删除后数组长度会减1，逆序索引指向会随着变化"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "4a78fada",
    "metadata": {},
    "outputs": [],
@@ -124,6 +132,7 @@
     "class Solution:\n",
     "    def removeDuplicate(self, nums: List[int]) -> int:\n",
     "        for i in range(len(nums) - 1, 0, -1):\n",
+    "            print(i, nums)\n",
     "            if nums[i] == nums[i - 1]: # 数组按顺序排好了\n",
     "                del nums[i]\n",
     "        return len(nums)        "
@@ -131,8 +140,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "id": "17093bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 [1, 1, 1, 2, 3, 3, 4]\n",
+      "5 [1, 1, 1, 2, 3, 3, 4]\n",
+      "4 [1, 1, 1, 2, 3, 4]\n",
+      "3 [1, 1, 1, 2, 3, 4]\n",
+      "2 [1, 1, 1, 2, 3, 4]\n",
+      "1 [1, 1, 2, 3, 4]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = Solution()\n",
+    "test.removeDuplicate([1,1,1,2,3,3,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6320fa54",
+   "metadata": {},
+   "source": [
+    "如果正序删除就会出现以下情况："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "9241868d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def removeDuplicate(self, nums: List[int]) -> int:\n",
+    "        for i in range(0, len(nums)-1):\n",
+    "            print(i, nums)\n",
+    "            if nums[i] == nums[i + 1]: # 数组按顺序排好了\n",
+    "                del nums[i]\n",
+    "        return len(nums)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b14bf16b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [1, 1, 1, 2, 3, 3, 4]\n",
+      "1 [1, 1, 2, 3, 3, 4]\n",
+      "2 [1, 1, 2, 3, 3, 4]\n",
+      "3 [1, 1, 2, 3, 3, 4]\n",
+      "4 [1, 1, 2, 3, 4]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-c0d4d0527c60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSolution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremoveDuplicate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-25-2a22d3ee4254>\u001b[0m in \u001b[0;36mremoveDuplicate\u001b[0;34m(self, nums)\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# 数组按顺序排好了\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m                 \u001b[0;32mdel\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "test = Solution()\n",
+    "test.removeDuplicate([1,1,1,2,3,3,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7112184b",
    "metadata": {},
    "outputs": [],
    "source": []
